Added maven central snapshot repo